<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="@color/foreGroundTint"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="414dp"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/capa" />

    <ImageView
        android:id="@+id/netflix_logo"
        android:layout_width="110dp"
        android:layout_height="54dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="270dp"
        app:layout_constraintEnd_toEndOf="@+id/background_image"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="@+id/background_image"
        app:layout_constraintTop_toTopOf="@+id/background_image"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/peaky_blinders_logo"
        android:layout_width="94dp"
        android:layout_height="64dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background_image"
        app:srcCompat="@drawable/logo_peaky" />

    <TextView
        android:id="@+id/series_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/series"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/peaky_blinders_logo"
        app:layout_constraintStart_toEndOf="@+id/netflix_logo"
        app:layout_constraintTop_toTopOf="@+id/background_image"
        app:layout_constraintVertical_bias="0.493" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Séries"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/peaky_blinders_logo"
        app:layout_constraintStart_toEndOf="@+id/netflix_logo"
        app:layout_constraintTop_toTopOf="@+id/background_image"
        app:layout_constraintVertical_bias="0.493" />

    <TextView
        android:id="@+id/movies_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/movies"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/peaky_blinders_logo"
        app:layout_constraintEnd_toStartOf="@+id/my_list_text"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toEndOf="@+id/series_text"
        app:layout_constraintTop_toTopOf="@+id/background_image"
        app:layout_constraintVertical_bias="0.493" />

    <TextView
        android:id="@+id/my_list_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="10dp"
        android:text="@string/mine_list"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/peaky_blinders_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.492" />

    <TextView
        android:id="@+id/violence_filter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:text="@string/violence_category"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/exciting_filter_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peaky_blinders_logo" />

    <TextView
        android:id="@+id/exciting_filter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/exciting_category"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peaky_blinders_logo" />

    <TextView
        android:id="@+id/sinister_filter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="52dp"
        android:text="@string/sinister_category"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/exciting_filter_text"
        app:layout_constraintTop_toBottomOf="@+id/peaky_blinders_logo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/watch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:backgroundTint="#FF0000"
        android:text="@string/watch_capitalized"
        android:textColor="@color/white"
        app:cornerRadius="6dp"
        app:icon="@drawable/baseline_play_arrow_24"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exciting_filter_text" />

    <TextView
        android:id="@+id/my_list_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/my_list_capitalized"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/watch_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/violence_filter_text" />

    <TextView
        android:id="@+id/details_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="54dp"
        android:gravity="center"
        android:text="@string/details_capitalized"
        android:textColor="@color/white"
        app:drawableTopCompat="@drawable/baseline_info_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/watch_button"
        app:layout_constraintTop_toBottomOf="@+id/sinister_filter_text" />

    <TextView
        android:id="@+id/releases_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="236dp"
        android:text="@string/releases"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_image" />

    <ImageView
        android:id="@+id/featured_movie_1"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/featured_movie_2"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/releases_label_text"
        app:srcCompat="@drawable/f1" />

    <ImageView
        android:id="@+id/featured_movie_2"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/releases_label_text"
        app:srcCompat="@drawable/f2" />

    <ImageView
        android:id="@+id/featured_movie_3"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/featured_movie_2"
        app:layout_constraintTop_toBottomOf="@+id/releases_label_text"
        app:srcCompat="@drawable/f3" />


</androidx.constraintlayout.widget.ConstraintLayout>